variables.Variables.scala.error
Compilation error:
Variables:4: error: not found: value &&
if (isOverBaggle() == false) && (isCarryingBaggle() == false) {
                             ^